--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "start:dev": "nodemon ./bin/www",
-    "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run start:dev\" \"npm run client\""
+    "Client": "npm start --prefix Client",
+    "dev": "concurrently \"npm run start:dev\" \"npm run Client\""
   },
   "dependencies": {
     "concurrently": "^7.1.0",
